# Spotify-Playlist-Transfer-Cli

./: .gitignore  pyproject.toml  setup.py
.github/workflows/: ci.yml  release.yml
