[project]
name = "spotify-playlist-transfer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "keyring>=25.6.0",
    "loguru>=0.7.3",
    "python-dotenv>=1.0.1",
    "questionary>=2.1.0",
    "rich>=13.9.4",
    "setuptools>=75.8.2",
    "spotipy>=2.25.1",
    "typer>=0.15.2",
]
